# repo-trends

./: .gitignore  README.md  pyproject.toml
.github/workflows/: daily.yml
data/raw/: 2026-04-18.jsonl  2026-04-19.jsonl  2026-04-20.jsonl  2026-04-21.jsonl  2026-04-22.jsonl  2026-04-23.jsonl  2026-04-24.jsonl  2026-04-25.jsonl  2026-04-26.jsonl  2026-04-27.jsonl  2026-04-28.jsonl  2026-04-29.jsonl  2026-04-30.jsonl  2026-05-01.jsonl  2026-05-02.jsonl  2026-05-03.jsonl  2026-05-04.jsonl  2026-05-05.jsonl  2026-05-06.jsonl  2026-05-07.jsonl  2026-05-08.jsonl  2026-05-09.jsonl  2026-05-10.jsonl  2026-05-11.jsonl  2026-05-12.jsonl  2026-05-13.jsonl  2026-05-14.jsonl  2026-05-15.jsonl  2026-05-16.jsonl  2026-05-17.jsonl  2026-05-18.jsonl  2026-05-19.jsonl  2026-05-20.jsonl  2026-05-21.jsonl  2026-05-22.jsonl  2026-05-23.jsonl  2026-05-24.jsonl  2026-05-25.jsonl  2026-05-27.jsonl  2026-05-28.jsonl  (+56 more)
logs/: 2026-04-18.md  2026-04-19.md  2026-04-20.md  2026-04-21.md  2026-04-22.md  2026-04-23.md  2026-04-24.md  2026-04-25.md  2026-04-26.md  2026-04-27.md  2026-04-28.md  2026-04-29.md  2026-04-30.md  2026-05-01.md  2026-05-02.md  2026-05-03.md  2026-05-04.md  2026-05-05.md  2026-05-06.md  2026-05-07.md  2026-05-08.md  2026-05-09.md  2026-05-10.md  2026-05-11.md  2026-05-12.md  2026-05-13.md  2026-05-14.md  2026-05-15.md  2026-05-16.md  2026-05-17.md  2026-05-18.md  2026-05-19.md  2026-05-20.md  2026-05-21.md  2026-05-22.md  2026-05-23.md  2026-05-24.md  2026-05-25.md  2026-05-27.md  2026-05-28.md  (+57 more)
src/repo_trends/: github.py  models.py  pipeline.py  render.py  sources.py
