[project]
name = "repo-trends"
version = "0.1.0"
description = "Daily GitHub repo trend tracker across multiple sources"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "beautifulsoup4>=4.12",
]

[project.scripts]
repo-trends = "repo_trends.pipeline:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
